@@ -1,6 +1,0 @@
-Surf3d.default <-
-function( x, z, y, ...) {
-    g <- expand.grid( x = sort(unique(x)), z = sort(unique(z)))
-    stop("Surf3d methods not yet written")
-}
-
