@@ -6,7 +6,7 @@
 Display name and value of argument -- for debugging
 }
 \description{
-%%  ~~ A concise (1-5 lines) description of what the function does. ~~
+Display name and value of argument -- used internally in p3d functions for debugging
 }
 \usage{
 disp(x)
@@ -14,44 +14,37 @@ disp(x)
 %- maybe also 'usage' for other objects documented here.
 \arguments{
   \item{x}{
-%%     ~~Describe \code{x} here~~
+Some argument in a function
 }
 }
-\details{
+%\details{
 %%  ~~ If necessary, more details than the description above ~~
-}
+%}
 \value{
-%%  ~Describe the value returned
+None
 %%  If it is a LIST, use
 %%  \item{comp1 }{Description of 'comp1'}
 %%  \item{comp2 }{Description of 'comp2'}
 %% ...
 }
-\references{
+%\references{
 %% ~put references to the literature/web site here ~
-}
+%}
 \author{
 Georges Monette
 }
 \note{
-%%  ~~further notes~~
+Should be just a p3d-internal function
 }
 
 %% ~Make other sections like Warning with \section{Warning }{....} ~
 
-\seealso{
+%\seealso{
 %% ~~objects to See Also as \code{\link{help}}, ~~~
-}
+%}
 \examples{
-##---- Should be DIRECTLY executable !! ----
-##-- ==>  Define data, use random,
-##--	or do  help(data=index)  for the standard data sets.
+# None
 
-## The function is currently defined as
-function( x ) {
-    cat("\n::: ",deparse(substitute(x)), " :::\n")
-    print(x)
-  }
 }
 % Add one or more standard keywords, see file 'KEYWORDS' in the
 % R documentation directory.
